- activate fork and parallel execution for test