@@ -15,13 +15,13 @@ version := "0.1"
 
 scalaVersion := "2.10.4"
 
-parallelExecution in Global := false //disable parallel execution for all tasks the below configuration could be deleted but for documentation purpose they are still there
+parallelExecution in Global := true //disable parallel execution for all tasks the below configuration could be deleted but for documentation purpose they are still there
 
-parallelExecution in Test := false
+parallelExecution in Test := true
 
-parallelExecution in ScoverageTest := false
+parallelExecution in ScoverageTest := true
 
-Keys.fork in Test := false
+Keys.fork in Test := true
 
 val logger = ProcessLogger(
     (o: String) => println("out " + o),
@@ -36,6 +36,8 @@ npm := scala.sys.process.Process( "npm" :: "install" :: Nil) ! logger
 ScoverageKeys.excludedPackages in ScoverageCompile := "controllers.javascript;controllers.ref;tools.imports;Routes;controllers.ReverseAssets;controllers.ReverseApplication;controllers.ReverseBuildController;controllers.ReverseTestCaseController;controllers.ReverseTestSuiteController;controllers.ReverseBadgeController;scala.slick.migration.api..*"
 
 envVars := Map("aes_key" -> "16rdKQfqN3L4TY7YktgxBw==", "sparkasse_username"->"username", "sparkasse_password"->"password") // setted for EasyCryptSpec
+
+javaOptions ++= Seq("-Xmx2G", "-Xms1G", "-XX:MaxPermSize=256M", "-XX:+CMSClassUnloadingEnabled"/*, "-verbose:gc", "-XX:+PrintGCDetails", "-XX:+PrintGCTimeStamps"*/, "-XX:+UseConcMarkSweepGC", "-XX:ReservedCodeCacheSize=128M")
 
 lazy val stickMigrationApi = RootProject(uri("git://github.com/nafg/slick-migration-api.git"))
 
